[package]
name = "xpad"
version = "0.1.0"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]

description = "Command line tool to pad delimited fields into neat columns"
repository = "https://github.com/coriolinus/pad"
readme = "README.md"
keywords = ["pad", "column", "padding"]
categories = ["command-line-interface", "text-processing"]
license = "MIT"

[dependencies]
clap = "2.30.0"
failure = "0.1.1"
itertools = "0.7.6"
unicode-segmentation = "1.2.0"
